--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,11 @@ Thumbs.db
 .idea/
 
 # -----------------------
+# AI / tooling
+# -----------------------
+.claude/
+
+# -----------------------
 # Logs & temp
 # -----------------------
 *.log
